# pythonlibrary2mcp

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/pylib2mcp/: __init__.py  cli.py  core.py
tests/pylib2mcp/: test_cli.py  test_core.py
