[project]
name = "pylib2mcp"
dynamic = ["version"]
description = "Port Python library functions as MCP tools"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastmcp==2.8.1",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

# ---------------- Dev ----------------

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "tox>=4.27.0",
    "tox-uv>=1.26.1",
]

[tool.black]
line-length = 500


# ---------------- Build ----------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pylib2mcp/__init__.py"

[project.scripts]
pylib2mcp = "pylib2mcp.cli:app"
