[project]
name = "pylib2mcp"
dynamic = ["version"]
description = "Expose Python library functions as MCP server tools"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastmcp==2.8.1",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

# ---------------- Dev ----------------

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "tox>=4.27.0",
    "tox-uv>=1.26.1",
]

[tool.black]
line-length = 500


# ---------------- Build ----------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pylib2mcp/__init__.py"

[project.scripts]
pylib2mcp = "pylib2mcp.cli:app"
